--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					
 					<select id="talentInput" name="Gear Talent"  class="talentInput" placeholder="Talent...">
 					<option value="volvo">Volvo</option>
-					<option value="Audi">Volvo</option>
+					<option value="Audi">Audi</option>
 					</select>
 				<br>
 				
