--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset = "utf-8">
 		<link rel="stylesheet" type="text/css" href="DivisionGearCalc.css"> 
-		<title>Tom Clancy's The Division Gear Calculator</title>
+		<!--<title>Tom Clancy's The Division Gear Calculator</title>-->
 	</head>
 	
 	
