--- a/ChestCreator/DivisionGearCalc.html
+++ b/ChestCreator/DivisionGearCalc.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset = "utf-8">
 		<link rel="stylesheet" type="text/css" href="DivisionGearCalc.css"> 
+		
 	</head>
 	
 	
@@ -11,7 +12,8 @@
 	<body>
 		<div id="Root">
 		<ul id="nav">
-				<li><a href="../CalculationHub/DivisionGearCalc.html">Gearset Creator</a></li>
+				<!--<li><a href="../CalculationHub/DivisionGearCalc.html">Gearset Creator</a></li>-->
+				<li><a href="../index.html">Gearset Creator</a></li>
 			</ul>
 			<form>
 				<fieldset>
