--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<li><a href="../ChestCreator/DivisionGearCalc.html">Body Creator</a></li>
 				<li><a href="../HeadCreator/DivisionGearCalc.html">Head Creator</a></li>
 				<li><a href="../LegCreator/DivisionGearCalc.html">Legs Creator</a></li>
-				<li><a href="../BackCreator/DivisionGearCalc.html">Backpack Creator</a></li>
+				<li><a href="BackCreator/index.html">Backpack Creator</a></li>
 				<li><a href="../HandCreator/DivisionGearCalc.html">Gloves Creator</a></li>
 				<li><a href="../HolsterCreator/DivisionGearCalc.html">Holster Creator</a></li>
 			</ul>
