Update and rename DivisionGearCalc.html to index.html

--- a/HandCreator/index.html
+++ b/HandCreator/index.html
@@ -12,7 +12,8 @@
 		<div id="Root">
 		
 		<ul id="nav">
-				<li><a href="../CalculationHub/DivisionGearCalc.html">Gearset Creator</a></li>
+				<!--<li><a href="../CalculationHub/DivisionGearCalc.html">Gearset Creator</a></li>-->
+			<li><a href="../index.html">Gearset Creator</a></li>
 			</ul>
 			
 			<form>
