--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<body>
 		<div id="Root">
 			<ul id="nav">
-				<li><a href="../ChestCreator/DivisionGearCalc.html">Body Creator</a></li>
-				<li><a href="../HeadCreator/DivisionGearCalc.html">Head Creator</a></li>
-				<li><a href="../LegCreator/DivisionGearCalc.html">Legs Creator</a></li>
+				<li><a href="ChestCreator/index.html">Body Creator</a></li>
+				<li><a href="HeadCreator/index.html">Head Creator</a></li>
+				<li><a href="LegCreator/index.html">Legs Creator</a></li>
 				<li><a href="BackCreator/index.html">Backpack Creator</a></li>
-				<li><a href="../HandCreator/DivisionGearCalc.html">Gloves Creator</a></li>
-				<li><a href="../HolsterCreator/DivisionGearCalc.html">Holster Creator</a></li>
+				<li><a href="HandCreator/index.html">Gloves Creator</a></li>
+				<li><a href="HolsterCreator/index.html">Holster Creator</a></li>
 			</ul>
 			
 
